--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "koa-flash-simple",
   "version": "0.0.2",
-  "description": "Simple and opinionated flash messages middleware for Koa v2 web framework",
+  "description": "Stupidly simple flash messages middleware for Koa v2 web framework",
   "main": "lib",
   "scripts": {
     "lint": "eslint --cache lib test",
